fixes button content alignment

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,6 +1,7 @@
 .button {
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   border: 2px solid $primary-1;
   border-radius: 120px;
   padding: 8px 16px;
